--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,10 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
     },
     "autoload": {
         "psr-4": {
-            "rbcommon\\text\\"
+            "rbcommon\\text\\": "src/rbcommon/text"
         }
     }
 }
